crates/retiretui/src/commands/tui/snapshots/retiretui__commands__tui__frames__compare_one_128x32.snap
---
source: crates/retiretui/src/commands/tui/frames.rs
assertion_line: 44
expression: composed_frame(app)
---
╭──────────╮╭────────╮╭─────────╮╭───────╮╭──────╮                                                                              
│1 Overview││2 Ledger││3 Compare││4 Tools││5 Plan│                                                                  plan.toml ● 
┴──────────┴┴────────┴╯         ╰┴───────┴┴──────┴──────────────────────────────────────────────────────────────────────────────
╭ Plans · today's dollars ──────────────────────────────────────────────────────────╮╭ Changes · plan.toml ────────────────────╮
│     Plan          Ends with  Money lasts  Success  Net worth 2026  Lifetime taxes ││▏ The baseline.                          │
│▌ ━━ plan.toml        $2.09M  Never short     100%          $1.07M           $697k ││                                         │
│  ━━ richer.toml      $3.99M  Never short     100%          $1.70M           $770k ││                                         │
│                                                                                   ││                                         │
│                                                                                   ││                                         │
│                                                                                   ││                                         │
╰───────────────────────────────────────────────────────────────────────────────────╯╰─────────────────────────────────────────╯
╭ Net worth by year · today's dollars · 2026 ──────────────────────────────────────────────────────────────────────────────────╮
│4.19M│┊                                                                                                                   ⣀⣀⣀⣀│
│     │┊                                                                                                 ⢀⣀⣀⣀⣀⡠⠤⠤⠤⠤⠔⠒⠒⠒⠒⠊⠉⠉    │
│     │┊                                                                                  ⢀⣀⣀⠤⠤⠤⠤⠤⠒⠒⠒⠒⠒⠉⠉⠁                     │
│     │┊                                                              ⢀⣀⣀⣀⣀⣀⣀⣀⠤⠤⠤⠤⠤⠒⠒⠊⠉⠉⠉⠉⠁                                    │
│     │┊                       ⢀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⡀  ⣀⣀⣀⣀⣀⣀⣀⡠⠤⠤⠤⠤⠤⠤⠤⠒⠒⠒⠒⠒⠉⠉⠉⠉⠁                                                        │
│     │┊                 ⢀⡠⠤⠔⠒⠊⠁           ⠈⠉⠉                                                                                 │
│     │┊            ⣀⠤⠒⠊⠉⠁                                                                                                     │
│     │┊     ⢀⣀⣀⠤⠤⠒⠉          ⢀⡠⠤⠤⠤⠤⣀⣀⣀⣀⣀                                                              ⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⡠⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤│
│     │⣀⡠⠤⠔⠊⠉⠁         ⣀⠤⠤⠒⠒⠊⠉⠁          ⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉                        │
│     │┊        ⢀⣀⡠⠤⠔⠊⠉                                                                                                        │
│     │┊⢀⣀⣀⠤⠤⠔⠒⠊⠁                                                                                                              │
│     │⠉⠁                                                                                                                      │
│     │┊                                                                                                                       │
│     │┊                                                                                                                       │
│0    │┊                                                                                                                       │
│     └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│  2026                                                          2050                                                      2074│
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
Compare this plan with others in its folder: c adds one.                                                                        
 ↑↓ plan  ⏎ open  ←→ metric  ⇥ pane  c add  x remove  b baseline  d diff  v view  ctrl-s save  r reload      : commands  ? help
